--- a/client/p.dashboard.html
+++ b/client/p.dashboard.html
@@ -13,7 +13,7 @@
 </head>
 <body id="page-signin">
   <div class="lyt-fullscreen">
-    <div class="google-map lyt-fullscreen"><div class="map-block"></div></div>
+    <div class="google-map lyt-fullscreen"><div id="dashboard-map" class="map-block"></div></div>
     <nav class="navbar navbar-fixed-top theme">
       <div class="container"><div class="row"><div class="col-sm-8 col-sm-offset-2 no-gutter">
         <div class="navbar-wrapper">
@@ -24,7 +24,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand inverse" href="#">
+            <a class="navbar-brand inverse">
               <img class="logo circle" src="asset/image/logo-circle-theme.png" />
               <img class="logo block" src="asset/image/logo-block-theme.png" />
             </a>
@@ -52,33 +52,33 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand small visible-sm visible-xs" href="#">
+            <a id="mark-current" class="navbar-brand small visible-sm visible-xs">
               <i class="fa fa-map-marker icon" aria-hidden="true"></i><span>Pin Drop</span>
             </a>
           </div>
           <div id="mapinc-navbar-bottom" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-              <li><a href="#">
+              <li><a id="mark-trigger-pin-drop">
                 <i class="fa fa-map-marker icon" aria-hidden="true"></i><span>Pin Drop</span>
               </a></li>
-              <li><a href="#">
+              <li><a id="mark-trigger-area">
                 <i class="fa fa-map-o icon" aria-hidden="true"></i><span>Area Mark</span>
               </a></li>
-              <li><a href="#">
+              <li><a id="mark-trigger-circle">
                 <i class="fa fa-dot-circle-o icon" aria-hidden="true"></i></i><span>Circle Mark</span>
               </a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
               <li class="dropdown inverse">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                   <i class="fa fa-child" aria-hidden="true"></i><span class="visible-sm visible-xs">Profile<span class="caret"></span></span>
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a href="#">
+                  <li><a>
                     <i class="fa fa-user icon" aria-hidden="true"></i><span>Edit Profile</span>
                   </a></li>
                   <li role="separator" class="divider"></li>
-                  <li><a href="#">
+                  <li><a>
                     <i class="fa fa-power-off icon" aria-hidden="true"></i><span>Sign Out</span>
                   </a></li>
                 </ul>
@@ -92,7 +92,8 @@
   <script src="http://code.jquery.com/jquery-3.1.1.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/lodash/4.16.2/lodash.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_muvCxO4FqTWepNvaArWY1CmrSAyRp3w&callback=initMap" async="" defer="defer"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_muvCxO4FqTWepNvaArWY1CmrSAyRp3w&callback=initMap&libraries=drawing" async="" defer="defer"></script>
   <script src="asset/js/core.min.js"></script>
+  <script src="asset/js/p.dashboard.min.js"></script>
 </body>
 </html>
