--- a/client/p.signin.html
+++ b/client/p.signin.html
@@ -28,13 +28,13 @@
                 <div class="form-group">
                   <div class="input-group circle transparent theme">
                     <span class="input-group-addon">Username</span>
-                    <input id="txt-username" type="text" class="form-control" autocomplete="off">
+                    <input id="txt-username" type="text" class="form-control" autocomplete="off" required>
                   </div>
                 </div>
                 <div class="form-group">
                   <div class="input-group circle transparent theme">
                     <span class="input-group-addon">Password</span>
-                    <input id="txt-password" type="password" class="form-control" autocomplete="off">
+                    <input id="txt-password" type="password" class="form-control" autocomplete="off" required>
                   </div>
                 </div>
                 <button type="submit" class="btn btn-warning btn-block circle">SIGN IN</button>
