--- a/client/p.dashboard.html
+++ b/client/p.dashboard.html
@@ -78,7 +78,7 @@
                     <i class="fa fa-user icon" aria-hidden="true"></i><span>Edit Profile</span>
                   </a></li>
                   <li role="separator" class="divider"></li>
-                  <li><a>
+                  <li><a onclick="doSignout()">
                     <i class="fa fa-power-off icon" aria-hidden="true"></i><span>Sign Out</span>
                   </a></li>
                 </ul>
