Update signup page skeleton

--- a/client/p.signup.html
+++ b/client/p.signup.html
@@ -24,7 +24,7 @@
                 <img class="logo block" src="asset/image/logo-block-inverse.png" />
               </div>
               <hr class="clear lg" />
-              <form>
+              <form id="content-form">
                 <div class="form-group">
                   <div class="input-group circle transparent theme inverse">
                     <span class="input-group-addon">Username</span>
@@ -54,5 +54,6 @@
   <script src="https://cdn.jsdelivr.net/lodash/4.16.2/lodash.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_muvCxO4FqTWepNvaArWY1CmrSAyRp3w&callback=initMap" async="" defer="defer"></script>
   <script src="asset/js/core.min.js"></script>
+  <script src="asset/js/p.signup.min.js"></script>
 </body>
 </html>
