--- a/client/p.dashboard.html
+++ b/client/p.dashboard.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans|Prompt">
   <link rel="stylesheet" href="asset/css/style.min.css">
 </head>
-<body id="page-signin">
+<body id="page-dashboard">
   <div class="lyt-fullscreen">
     <div class="google-map lyt-fullscreen"><div id="dashboard-map" class="map-block"></div></div>
     <nav class="navbar navbar-fixed-top theme">
@@ -58,6 +58,9 @@
           </div>
           <div id="mapinc-navbar-bottom" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
+              <li><a id="mark-trigger-select">
+                <i class="fa fa-hand-pointer-o icon" aria-hidden="true"></i><span>Select</span>
+              </a></li>
               <li><a id="mark-trigger-pin-drop">
                 <i class="fa fa-map-marker icon" aria-hidden="true"></i><span>Pin Drop</span>
               </a></li>
