--- a/client/p.signup.html
+++ b/client/p.signup.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans|Prompt">
   <link rel="stylesheet" href="asset/css/style.min.css">
 </head>
-<body id="page-signin">
+<body id="page-signup">
   <div class="lyt-fullscreen">
     <div class="google-map lyt-fullscreen"><div class="map-block"></div></div>
     <div class="lyt-vertical lyt-fullscreen lyt-theme inverse">
