--- a/client/p.dashboard.html
+++ b/client/p.dashboard.html
@@ -104,7 +104,7 @@
           </div>
           <div class="col-xs-3">
             <button type="button" class="btn btn-action btn-info detail-close">
-              <i class="fa fa-chevron-right fa-lg" aria-hidden="true"></i>
+              <i class="fa fa-times fa-lg" aria-hidden="true"></i>
             </button>
           </div>
         </div>
