--- a/client/p.dashboard.html
+++ b/client/p.dashboard.html
@@ -98,7 +98,7 @@
           <div class="col-xs-9">
             <div class="block">
               <div class="wrapper-outer"><div class="wrapper-inner">
-                <h4>New Record</h4>
+                <h4 id="detail-title">[Title]</h4>
               </div></div>
             </div>
           </div>
