Refactoring pin dashboard script & css:

--- a/client/p.dashboard.html
+++ b/client/p.dashboard.html
@@ -127,8 +127,8 @@
                   </select>
                 </div>
                 <div class="form-group">
-                  <label for="0000-range">Sales Range</label>
-                  <input id="0000-range" type="number" class="form-control" placeholder="Range" min="0" required>
+                  <label for="0000-number">Sales</label>
+                  <input id="0000-number" type="number" class="form-control" placeholder="Number" min="0" required>
                 </div>
               </form>
             </div>
