Add supervisor email text input in pin detail

--- a/client/p.dashboard.html
+++ b/client/p.dashboard.html
@@ -130,6 +130,11 @@
                   <label for="0000-number">Sales</label>
                   <input id="0000-number" type="number" class="form-control" placeholder="Number" min="0" required>
                 </div>
+                <hr />
+                <div class="form-group">
+                  <label for="txt-pin-supervisor">Supervisor Email</label>
+                  <input id="txt-pin-supervisor" type="email" class="form-control" placeholder="Email Address" required>
+                </div>
               </form>
             </div>
           </div>
