--- a/client/p.dashboard.html
+++ b/client/p.dashboard.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans|Prompt">
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   <link rel="stylesheet" href="asset/css/nanoscroller.min.css">
   <link rel="stylesheet" href="asset/css/style.min.css">
 </head>
@@ -73,6 +74,12 @@
               </a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
+              <li>
+                <div id="datepicker-input" class="datepicker top right hidden"></div>
+                <a id="datepicker-button">
+                  <i class="fa fa-calendar icon" aria-hidden="true"></i></i><span>Date</span>
+                </a>
+              </li>
               <li class="dropdown inverse">
                 <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                   <i class="fa fa-child" aria-hidden="true"></i><span class="visible-sm visible-xs">Profile<span class="caret"></span></span>
@@ -193,6 +200,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/lodash/4.16.2/lodash.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_muvCxO4FqTWepNvaArWY1CmrSAyRp3w&callback=initMap&libraries=drawing" async="" defer="defer"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script src="asset/js/jquery.nanoscroller.min.js"></script>
   <script src="asset/js/core.min.js"></script>
   <script src="asset/js/p.dashboard.min.js"></script>
