Add loading popup in pin dashboard

--- a/client/p.dashboard.html
+++ b/client/p.dashboard.html
@@ -16,6 +16,19 @@
 <body id="page-dashboard">
   <div class="lyt-fullscreen">
     <div class="google-map lyt-fullscreen"><div id="dashboard-map" class="map-block"></div></div>
+    <div id="dashboard-loading" class="lyt-fullscreen hidden">
+      <div class="wrapper-outer">
+        <div class="wrapper-inner">
+          <div class="circle-wrapper">
+            <div class="wrapper-outer"><div class="wrapper-inner">
+              <i class="fa fa-spinner fa-pulse fa-4x fa-fw"></i>
+              <br /><br />
+              <h4><strong>Loading Data</strong></h4>
+            </div></div>
+          </div>
+        </div>
+      </div>
+    </div>
     <nav class="navbar navbar-fixed-top theme">
       <div class="container"><div class="container-wrapper">
         <div class="navbar-wrapper">
