--- a/client/p.signin.html
+++ b/client/p.signin.html
@@ -12,8 +12,55 @@
   <link rel="stylesheet" href="asset/css/style.min.css">
 </head>
 <body id="page-signin">
-  <div class="lyt-fullscreen">
-    <div class="google-map lyt-fullscreen"><div class="map-block"></div></div>
+  <div class="lyt-fullscreen separate-wrapper white">
+    <div class="background-block" style="background-image:url('https://maps.googleapis.com/maps/api/staticmap?center=-6.218096,106.802711&zoom=15&size=1000x1000&scale=2&maptype=roadmap&key=AIzaSyA_muvCxO4FqTWepNvaArWY1CmrSAyRp3w')"></div>
+    <div class="separate-box">
+      <div class="cover-block lyt-vertical">
+        <div class="wrapper">
+          <div class="logo-wrapper text-center">
+            <img class="logo circle" src="asset/image/logo-circle-theme.png" style="display:inline-table; width:40px; height:40px; vertical-align:middle;" />
+            <img class="logo block" src="asset/image/logo-block-theme.png" style="display:inline-table; margin:0px 0px 0px 10px; vertical-align:middle;" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="separate-box">
+      <div class="cover-block lyt-vertical">
+        <div class="wrapper">
+          <div class="content-box">
+            <form id="content-form">
+              <div class="form-group">
+                <label for="txt-username">Username</label>
+                <input id="txt-username" type="text" class="form-control" autocomplete="off" required />
+              </div>
+              <div class="form-group">
+                <label for="txt-password">Password</label>
+                <input id="txt-password" type="password" class="form-control" autocomplete="off" required />
+              </div>
+              <div class="form-group">
+                <label for="txt-password">Position</label>
+                <div class="input-group">
+                  <label class="radio-inline">
+                    <input type="radio" name="inlineRadioOptions" value="option1" checked> Business Owner
+                  </label>
+                  <label class="radio-inline">
+                    <input type="radio" name="inlineRadioOptions" value="option2"> Supervisor
+                  </label>
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="alert alert-danger" role="alert">...</div>
+              </div>
+              <button type="submit" class="btn btn-warning btn-block">SIGN IN</button>
+              <div class="form-action text-center">
+                <a href="">Don't have an account?</a>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- <div class="google-map lyt-fullscreen"><div class="map-block"></div></div>
     <div class="lyt-vertical lyt-fullscreen lyt-theme">
       <div class="wrapper">
         <div class="container">
@@ -47,7 +94,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
   <script src="http://code.jquery.com/jquery-3.1.1.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
