Add signin box header

--- a/client/p.signin.html
+++ b/client/p.signin.html
@@ -28,7 +28,11 @@
       <div class="cover-block lyt-vertical">
         <div class="wrapper">
           <div class="content-box">
-            <form id="content-form">
+            <div class="content-header">
+              <h4><strong>Sign In Page</strong></h4>
+            </div>
+            <div class="content-body">
+              <form id="content-form">
               <div class="form-group">
                 <label for="txt-username">Username</label>
                 <input id="txt-username" type="text" class="form-control" autocomplete="off" required />
@@ -56,6 +60,7 @@
                 <a href="">Don't have an account?</a>
               </div>
             </form>
+            </div>
           </div>
         </div>
       </div>
