--- a/client/p.signin.html
+++ b/client/p.signin.html
@@ -57,7 +57,7 @@
               </div>
               <button type="submit" class="btn btn-warning btn-block">SIGN IN</button>
               <div class="form-action text-center">
-                <a href="">Don't have an account?</a>
+                <a href="p.signup.html">Don't have an account?</a>
               </div>
             </form>
             </div>
@@ -65,46 +65,9 @@
         </div>
       </div>
     </div>
-    <!-- <div class="google-map lyt-fullscreen"><div class="map-block"></div></div>
-    <div class="lyt-vertical lyt-fullscreen lyt-theme">
-      <div class="wrapper">
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-4 col-sm-offset-4">
-              <div class="logo-wrapper text-center">
-                <img class="logo circle" src="asset/image/logo-circle-theme.png" />
-                <img class="logo block" src="asset/image/logo-block-theme.png" />
-              </div>
-              <hr class="clear lg" />
-              <form id="content-form">
-                <div class="form-group">
-                  <div class="input-group circle transparent theme">
-                    <span class="input-group-addon">Username</span>
-                    <input id="txt-username" type="text" class="form-control" autocomplete="off" required>
-                  </div>
-                </div>
-                <div class="form-group">
-                  <div class="input-group circle transparent theme">
-                    <span class="input-group-addon">Password</span>
-                    <input id="txt-password" type="password" class="form-control" autocomplete="off" required>
-                  </div>
-                </div>
-                <button type="submit" class="btn btn-warning btn-block circle">SIGN IN</button>
-              </form>
-              <hr class="clear sm" />
-              <div class="text-center">
-                <a href="p.signup.html" type="submit" class="text theme">Register new account?</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> -->
   </div>
   <script src="http://code.jquery.com/jquery-3.1.1.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/lodash/4.16.2/lodash.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_muvCxO4FqTWepNvaArWY1CmrSAyRp3w&callback=initMap" async="" defer="defer"></script>
   <script src="asset/js/core.min.js"></script>
   <script src="asset/js/p.signin.min.js"></script>
 </body>
