--- a/client/p.signup.html
+++ b/client/p.signup.html
@@ -12,37 +12,43 @@
   <link rel="stylesheet" href="asset/css/style.min.css">
 </head>
 <body id="page-signup">
-  <div class="lyt-fullscreen">
-    <div class="google-map lyt-fullscreen"><div class="map-block"></div></div>
-    <div class="lyt-vertical lyt-fullscreen lyt-theme inverse">
-      <div class="wrapper">
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-4 col-sm-offset-4">
-              <div class="logo-wrapper text-center">
-                <img class="logo circle" src="asset/image/logo-circle-inverse.png" />
-                <img class="logo block" src="asset/image/logo-block-inverse.png" />
-              </div>
-              <hr class="clear lg" />
+  <div class="lyt-fullscreen separate-wrapper blue">
+    <div class="background-block" style="background-image:url('https://maps.googleapis.com/maps/api/staticmap?center=-6.218096,106.802711&zoom=15&size=1000x1000&scale=2&maptype=roadmap&key=AIzaSyA_muvCxO4FqTWepNvaArWY1CmrSAyRp3w')"></div>
+    <div class="separate-box">
+      <div class="cover-block lyt-vertical">
+        <div class="wrapper">
+          <div class="logo-wrapper text-center">
+            <img class="logo circle" src="asset/image/logo-circle-inverse.png" style="display:inline-table; width:40px; height:40px; vertical-align:middle;" />
+            <img class="logo block" src="asset/image/logo-block-inverse.png" style="display:inline-table; margin:0px 0px 0px 10px; vertical-align:middle;" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="separate-box">
+      <div class="cover-block lyt-vertical">
+        <div class="wrapper">
+          <div class="content-box">
+            <div class="content-header">
+              <h4><strong>Register Page</strong></h4>
+            </div>
+            <div class="content-body">
               <form id="content-form">
-                <div class="form-group">
-                  <div class="input-group circle transparent theme inverse">
-                    <span class="input-group-addon">Username</span>
-                    <input id="txt-username" type="text" class="form-control" autocomplete="off" required>
-                  </div>
-                </div>
-                <div class="form-group">
-                  <div class="input-group circle transparent theme inverse">
-                    <span class="input-group-addon">Password</span>
-                    <input id="txt-password" type="password" class="form-control" autocomplete="off" required>
-                  </div>
-                </div>
-                <button type="submit" class="btn btn-warning btn-block circle">SIGN UP</button>
-              </form>
-              <hr class="clear sm" />
-              <div class="text-center">
-                <a href="p.signin.html" type="submit" class="text theme inverse">Already have an account?</a>
+              <div class="form-group">
+                <label for="txt-username">Username</label>
+                <input id="txt-username" type="text" class="form-control" autocomplete="off" required>
               </div>
+              <div class="form-group">
+                <label for="txt-password">Password</label>
+                <input id="txt-password" type="password" class="form-control" autocomplete="off" required>
+              </div>
+              <div class="form-group">
+                <div class="alert alert-danger" role="alert">...</div>
+              </div>
+              <button type="submit" class="btn btn-warning btn-block">SIGN UP</button>
+              <div class="form-action text-center">
+                <a href="p.signin.html">Already have an account?</a>
+              </div>
+            </form>
             </div>
           </div>
         </div>
@@ -51,8 +57,6 @@
   </div>
   <script src="http://code.jquery.com/jquery-3.1.1.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/lodash/4.16.2/lodash.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_muvCxO4FqTWepNvaArWY1CmrSAyRp3w&callback=initMap" async="" defer="defer"></script>
   <script src="asset/js/core.min.js"></script>
   <script src="asset/js/p.signup.min.js"></script>
 </body>
