--- a/client/p.forgotpass.html
+++ b/client/p.forgotpass.html
@@ -11,15 +11,15 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans|Prompt">
   <link rel="stylesheet" href="asset/css/style.min.css">
 </head>
-<body id="page-signup">
-  <div class="lyt-fullscreen separate-wrapper blue">
+<body id="page-forgot-pass">
+  <div class="lyt-fullscreen separate-wrapper white">
     <div class="background-block" style="background-image:url('https://maps.googleapis.com/maps/api/staticmap?center=-6.218096,106.802711&zoom=15&size=1000x1000&scale=2&maptype=roadmap&key=AIzaSyA_muvCxO4FqTWepNvaArWY1CmrSAyRp3w')"></div>
     <div class="separate-box">
       <div class="cover-block lyt-vertical">
         <div class="wrapper">
           <div class="logo-wrapper text-center">
-            <img class="logo circle" src="asset/image/logo-circle-inverse.png" style="display:inline-table; width:40px; height:40px; vertical-align:middle;" />
-            <img class="logo block" src="asset/image/logo-block-inverse.png" style="display:inline-table; margin:0px 0px 0px 10px; vertical-align:middle;" />
+            <img class="logo circle" src="asset/image/logo-circle-theme.png" style="display:inline-table; width:40px; height:40px; vertical-align:middle;" />
+            <img class="logo block" src="asset/image/logo-block-theme.png" style="display:inline-table; margin:0px 0px 0px 10px; vertical-align:middle;" />
           </div>
         </div>
       </div>
@@ -29,26 +29,22 @@
         <div class="wrapper">
           <div class="content-box">
             <div class="content-header">
-              <h4><strong>Register Page</strong></h4>
+              <h4><strong>Forgot Password Page</strong></h4>
             </div>
             <div class="content-body">
               <form id="content-form">
-              <div class="form-group">
-                <label for="txt-email">Email</label>
-                <input id="txt-email" type="text" class="form-control" autocomplete="off" required>
-              </div>
-              <div class="form-group">
-                <label for="txt-password">Password</label>
-                <input id="txt-password" type="password" class="form-control" autocomplete="off" required>
-              </div>
-              <div class="form-group">
-                <div class="alert alert-danger" role="alert">...</div>
-              </div>
-              <button type="submit" class="btn btn-warning btn-block">SIGN UP</button>
-              <div class="form-action text-center">
-                <a href="p.signin.html">Already have an account?</a>
-              </div>
-            </form>
+                <div class="form-group">
+                  <label for="txt-email">Email</label>
+                  <input id="txt-email" type="email" class="form-control" autocomplete="off" required />
+                </div>
+                <div class="form-group">
+                  <div class="alert alert-danger" role="alert">...</div>
+                </div>
+                <button type="submit" class="btn btn-warning btn-block">SUBMIT</button>
+                <div class="form-action text-center">
+                  <a href="p.signin.html">Already have an account?</a>
+                </div>
+              </form>
             </div>
           </div>
         </div>
@@ -58,6 +54,6 @@
   <script src="http://code.jquery.com/jquery-3.1.1.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <script src="asset/js/core.min.js"></script>
-  <script src="asset/js/p.signup.min.js"></script>
+  <script src="asset/js/p.signin.min.js"></script>
 </body>
 </html>
