--- a/client/p.signin.html
+++ b/client/p.signin.html
@@ -34,12 +34,17 @@
             <div class="content-body">
               <form id="content-form">
               <div class="form-group">
-                <label for="txt-username">Username</label>
-                <input id="txt-username" type="text" class="form-control" autocomplete="off" required />
+                <label for="txt-email">Email</label>
+                <input id="txt-email" type="text" class="form-control" autocomplete="off" required />
               </div>
               <div class="form-group">
                 <label for="txt-password">Password</label>
-                <input id="txt-password" type="password" class="form-control" autocomplete="off" required />
+                <div class="input-group with-addon-right">
+                  <input id="txt-password" type="password" class="form-control" autocomplete="off" required />
+                  <div class="input-group-addon">
+                    <a href="p.forgotpass.html">Forgot password?</a>
+                  </div>
+                </div>
               </div>
               <div class="form-group">
                 <label for="txt-password">Position</label>
