--- a/client/p.dashboard.html
+++ b/client/p.dashboard.html
@@ -15,7 +15,10 @@
 </head>
 <body id="page-dashboard">
   <div class="lyt-fullscreen">
-    <div class="google-map lyt-fullscreen"><div id="dashboard-map" class="map-block"></div></div>
+    <div class="google-map lyt-fullscreen">
+      <div id="dashboard-map" class="map-block"></div>
+      <div id="dashboard-map-cover" class="lyt-fullscreen hidden" style="top:0px;"></div>
+    </div>
     <div id="dashboard-loading" class="lyt-fullscreen hidden">
       <div class="wrapper-outer">
         <div class="wrapper-inner">
@@ -219,10 +222,10 @@
   <script src="http://code.jquery.com/jquery-3.1.1.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/lodash/4.16.2/lodash.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_muvCxO4FqTWepNvaArWY1CmrSAyRp3w&callback=initMap&libraries=drawing,places&sensor=false" async="" defer="defer"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script src="asset/js/jquery.nanoscroller.min.js"></script>
   <script src="asset/js/core.min.js"></script>
   <script src="asset/js/p.dashboard.min.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_muvCxO4FqTWepNvaArWY1CmrSAyRp3w&callback=initMap&libraries=drawing,places&sensor=false" async="" defer="defer"></script>
 </body>
 </html>
