Add search function in page map dashboard

--- a/client/p.dashboard.html
+++ b/client/p.dashboard.html
@@ -58,10 +58,12 @@
             <form id="search-bar" class="navbar-form navbar-right">
               <div class="form-group">
                 <div class="input-group theme">
+                  <input id="txt-dashboard-search-temp" type="text" class="form-control hidden text-right text-search" autocomplete="off" placeholder="Search">
                   <input id="txt-dashboard-search" type="text" class="form-control text-right text-search" autocomplete="off" placeholder="Search">
                   <span class="input-group-addon"><i class="fa fa-search" aria-hidden="true"></i></span>
                 </div>
               </div>
+              <div id="search-autocomplete" class="pac-container"></div>
             </form>
           </div>
         </div>
