Add founder photo

--- a/client/p.landing.html
+++ b/client/p.landing.html
@@ -69,7 +69,7 @@
       </div>
       <ul id="founders-list">
         <li>
-          <img src="http://cliparts.co/cliparts/qcB/oz7/qcBoz77pi.png">
+          <img src="asset/image/founder-ivan.png">
           <div class="detail">
             <span class="name">Ivan Gerard</span>
             <a href="https://github.com/ivangerard/" target="_blank">
@@ -78,7 +78,7 @@
           </div>
         </li>
         <li>
-          <img src="http://cliparts.co/cliparts/qcB/oz7/qcBoz77pi.png">
+          <img src="asset/image/founder-sahbana.png">
           <div class="detail">
             <span class="name">Sahbana Lubis</span>
             <a href="https://github.com/sahbanagold/" target="_blank">
@@ -87,7 +87,7 @@
           </div>
         </li>
         <li>
-          <img src="http://cliparts.co/cliparts/qcB/oz7/qcBoz77pi.png">
+          <img src="asset/image/founder-septhian.png">
           <div class="detail">
             <span class="name">Septhianto Diga</span>
             <a href="https://github.com/digachandra/" target="_blank">
@@ -96,7 +96,7 @@
           </div>
         </li>
         <li>
-          <img src="http://cliparts.co/cliparts/qcB/oz7/qcBoz77pi.png">
+          <img src="asset/image/founder-ari.png">
           <div class="detail">
             <span class="name">Ari Adiprana</span>
             <a href="https://github.com/ariadiprana/" target="_blank">
@@ -105,7 +105,7 @@
           </div>
         </li>
         <li>
-          <img src="http://cliparts.co/cliparts/qcB/oz7/qcBoz77pi.png">
+          <img src="asset/image/founder-andrew.png">
           <div class="detail">
             <span class="name">Andrew Tandiawan</span>
             <a href="https://github.com/atandiawan/" target="_blank">
