--- a/client/p.signin.html
+++ b/client/p.signin.html
@@ -14,58 +14,59 @@
 <body id="page-signin">
   <div class="lyt-fullscreen separate-wrapper white">
     <div class="background-block" style="background-image:url('https://maps.googleapis.com/maps/api/staticmap?center=-6.218096,106.802711&zoom=15&size=1000x1000&scale=2&maptype=roadmap&key=AIzaSyA_muvCxO4FqTWepNvaArWY1CmrSAyRp3w')"></div>
-    <div class="cover-block"></div>
-    <div class="separate-box">
-      <div class="cover-block lyt-vertical">
-        <div class="wrapper">
-          <div class="logo-wrapper text-center">
-            <img class="logo circle" src="asset/image/logo-circle-theme.png" style="display:inline-table; width:40px; height:40px; vertical-align:middle;" />
-            <img class="logo block" src="asset/image/logo-block-theme.png" style="display:inline-table; margin:0px 0px 0px 10px; vertical-align:middle;" />
+    <div class="cover-block">
+      <div class="separate-box">
+        <div class="lyt-vertical">
+          <div class="wrapper">
+            <div class="logo-wrapper text-center">
+              <img class="logo circle" src="asset/image/logo-circle-theme.png" style="display:inline-table; width:40px; height:40px; vertical-align:middle;" />
+              <img class="logo block" src="asset/image/logo-block-theme.png" style="display:inline-table; margin:0px 0px 0px 10px; vertical-align:middle;" />
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="separate-box">
-      <div class="cover-block lyt-vertical">
-        <div class="wrapper">
-          <div class="content-box">
-            <div class="content-header">
-              <h4><strong>Sign In Page</strong></h4>
-            </div>
-            <div class="content-body">
-              <form id="content-form">
-              <div class="form-group">
-                <label for="txt-email">Email</label>
-                <input id="txt-email" type="text" class="form-control" autocomplete="off" required />
+      <div class="separate-box">
+        <div class="lyt-vertical">
+          <div class="wrapper">
+            <div class="content-box">
+              <div class="content-header">
+                <h4><strong>Sign In Page</strong></h4>
               </div>
-              <div class="form-group">
-                <label for="txt-password">Password</label>
-                <div class="input-group with-addon-right">
-                  <input id="txt-password" type="password" class="form-control" autocomplete="off" required />
-                  <div class="input-group-addon">
-                    <a href="p.forgotpass.html">Forgot password?</a>
+              <div class="content-body">
+                <form id="content-form">
+                <div class="form-group">
+                  <label for="txt-email">Email</label>
+                  <input id="txt-email" type="text" class="form-control" autocomplete="off" required />
+                </div>
+                <div class="form-group">
+                  <label for="txt-password">Password</label>
+                  <div class="input-group with-addon-right">
+                    <input id="txt-password" type="password" class="form-control" autocomplete="off" required />
+                    <div class="input-group-addon">
+                      <a href="p.forgotpass.html">Forgot password?</a>
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class="form-group">
-                <label for="txt-password">Position</label>
-                <div class="input-group">
-                  <label class="radio-inline">
-                    <input type="radio" name="inlineRadioOptions" value="option1" checked> Business Owner
-                  </label>
-                  <label class="radio-inline">
-                    <input type="radio" name="inlineRadioOptions" value="option2"> Supervisor
-                  </label>
+                <div class="form-group">
+                  <label for="txt-password">Position</label>
+                  <div class="input-group">
+                    <label class="radio-inline">
+                      <input type="radio" name="inlineRadioOptions" value="option1" checked> Business Owner
+                    </label>
+                    <label class="radio-inline">
+                      <input type="radio" name="inlineRadioOptions" value="option2"> Supervisor
+                    </label>
+                  </div>
                 </div>
+                <div class="form-group">
+                  <div class="alert alert-danger" role="alert">...</div>
+                </div>
+                <button type="submit" class="btn btn-warning btn-block">SIGN IN</button>
+                <div class="form-action text-center">
+                  <a href="p.signup.html">Don't have an account?</a>
+                </div>
+              </form>
               </div>
-              <div class="form-group">
-                <div class="alert alert-danger" role="alert">...</div>
-              </div>
-              <button type="submit" class="btn btn-warning btn-block">SIGN IN</button>
-              <div class="form-action text-center">
-                <a href="p.signup.html">Don't have an account?</a>
-              </div>
-            </form>
             </div>
           </div>
         </div>
